; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revparse.c_retrieve_remote_tracking_reference.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revparse.c_retrieve_remote_tracking_reference.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_EINVALIDSPEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i8*, i32*)* @retrieve_remote_tracking_reference to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @retrieve_remote_tracking_reference(i32** %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32** %0, i32*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 -1, i32* %10, align 4
  %11 = load i32**, i32*** %5, align 8
  %12 = load i32*, i32** %11, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %22

14:                                               ; preds = %3
  %15 = load i32*, i32** %7, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = call i32 @git_reference_dwim(i32** %9, i32* %15, i8* %16)
  store i32 %17, i32* %10, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %14
  %20 = load i32, i32* %10, align 4
  store i32 %20, i32* %4, align 4
  br label %44

21:                                               ; preds = %14
  br label %26

22:                                               ; preds = %3
  %23 = load i32**, i32*** %5, align 8
  %24 = load i32*, i32** %23, align 8
  store i32* %24, i32** %9, align 8
  %25 = load i32**, i32*** %5, align 8
  store i32* null, i32** %25, align 8
  br label %26

26:                                               ; preds = %22, %21
  %27 = load i32*, i32** %9, align 8
  %28 = call i32 @git_reference_is_branch(i32* %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %32, label %30

30:                                               ; preds = %26
  %31 = load i32, i32* @GIT_EINVALIDSPEC, align 4
  store i32 %31, i32* %10, align 4
  br label %40

32:                                               ; preds = %26
  %33 = load i32*, i32** %9, align 8
  %34 = call i32 @git_branch_upstream(i32** %8, i32* %33)
  store i32 %34, i32* %10, align 4
  %35 = icmp slt i32 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %32
  br label %40

37:                                               ; preds = %32
  %38 = load i32*, i32** %8, align 8
  %39 = load i32**, i32*** %5, align 8
  store i32* %38, i32** %39, align 8
  br label %40

40:                                               ; preds = %37, %36, %30
  %41 = load i32*, i32** %9, align 8
  %42 = call i32 @git_reference_free(i32* %41)
  %43 = load i32, i32* %10, align 4
  store i32 %43, i32* %4, align 4
  br label %44

44:                                               ; preds = %40, %19
  %45 = load i32, i32* %4, align 4
  ret i32 %45
}

declare dso_local i32 @git_reference_dwim(i32**, i32*, i8*) #1

declare dso_local i32 @git_reference_is_branch(i32*) #1

declare dso_local i32 @git_branch_upstream(i32**, i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
